Apply suggestions from review
Co-authored-by: ARVIN <141419722+Arvin21M@users.noreply.github.com>

--- a/data/blog/stuart-bowman-receives-lts-grant.mdx
+++ b/data/blog/stuart-bowman-receives-lts-grant.mdx
@@ -24,10 +24,11 @@ this will expand the network's capabilities and increase its value and activity.
 Stuart will continue to work on the Satellite Stack and related components, such
 as:
 
-- [Satellite Node](https://github.com/lovvtide/satellite-node): A nostr node with enhanced relay capabilities, providing a dedicated backend for communities.
-- [Satellite Control](https://github.com/lovvtide/satellite-control): A control panel that allows non-technical users to operate their relay and media archive.
-- [Satellite Desktop](https://github.com/lovvtide/satellite-desktop): A cross-platform desktop app to easily run satellite nodes on consumer hardware.
-- [Satellite CDN](https://github.com/lovvtide/satellite-cdn): A Blossom-compatible CDN server that handles media uploads, downloads, user authentication, and file indexing.
+- [Satellite Public Node](https://github.com/satellite-earth/public-node): A "nostr node" with enhanced relay capabilities, providing a dedicated backend for communities.
+- [Satellite Control](https://github.com/satellite-earth/dashboard-ui): A control panel that allows non-technical users to operate their relay and media archive.
+- [Satellite Desktop](https://github.com/satellite-earth/desktop): A cross-platform desktop app to easily run satellite nodes on consumer hardware.
+- [Satellite CDN](https://github.com/lovvtide/satellite-cdn): A Blossom-compatible CDN server that handles media uploads, downloads, user authentication, lightning payments, and file indexing.
+- [Satellite Private Node](https://github.com/satellite-earth/private-node): A local nostr relay and media proxy to boost speed, privacy, and network redundancy.
 
 > The Satellite stack will enable communities and organizations on nostr to be
 > not only cryptographically sovereign, but also sovereign in terms of their
