Add CDN footnote

--- a/data/blog/stuart-bowman-receives-lts-grant.mdx
+++ b/data/blog/stuart-bowman-receives-lts-grant.mdx
@@ -12,7 +12,7 @@ We are happy to announce that another nostr developer is joining our roster of
 LTS Grantees: [Stuart Bowman](https://github.com/lovvtide).
 
 Stuart is the main developer and maintainer of [Satellite
-Earth](https://satellite.earth/), a web-based nostr client and CDN server that
+Earth](https://satellite.earth/), a web-based nostr client and CDN[^cdn] server that
 is geared towards self-sovereign communities.
 
 The overarching goal of Satellite is to strengthen the nostr network by
@@ -50,3 +50,5 @@ Fund](/funds/nostr).
 <center>
     <DonateToNostrFundButton/>
 </center>
+
+[^CDN]: A [content delivery network](https://en.wikipedia.org/wiki/Content_delivery_network) (CDN) is a geographically distributed network of proxy servers with the goal of providing high availability and performance.
