update protobufjs dep to 7.2.5 or 6.11.4 & fix typo
Signed-off-by: Bayer <bayernator@protonmail.com>

--- a/data/authors/bayer.mdx
+++ b/data/authors/bayer.mdx
@@ -12,7 +12,7 @@ volunteer: true
 
 Bayer spent most of his early career in a customer facing role before moving 
 into a more technical focused position. During the day he works on product
-and helps lead his team's developmental roadmap, at night he is busy honing his skills as developer
+and helps lead his team's developmental roadmap, at night he is busy honing his skills as a developer
 to help build bitcoin focused tools and promote self-custody. Having volunteered for Bisq and helped 
 translate some bitcoin FOSS projects, he is eager to continue contributing to bitcoin open source projects.
 
