--- a/data/blog/opensats-receives-one-million-from-reynolds-foundation.mdx
+++ b/data/blog/opensats-receives-one-million-from-reynolds-foundation.mdx
@@ -4,7 +4,7 @@ date: '2024-04-20'
 tags: ['OpenSats', 'funding', 'bitcoin', 'donations']
 authors: ['dergigi', 'default']
 draft: false
-summary: "TODO"
+summary: "The Reynolds Foundation is supporting OpenSats with a generous $1,000,000 donation."
 ---
 
 People often say that Bitcoin is a marathon, not a sprint. We believe that this
