Add donations tag to startsmall blog post

--- a/data/blog/opensats-receives-additional-funding-of-dollar10m-from-startsmall.mdx
+++ b/data/blog/opensats-receives-additional-funding-of-dollar10m-from-startsmall.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Additional Funding from #startsmall"
 date: '2023-05-04'
-tags: ['OpenSats', 'funding', 'startsmall', 'bitcoin', 'nostr']
+tags: ['OpenSats', 'funding', 'donations', 'startsmall', 'bitcoin', 'nostr']
 draft: false
 summary: "OpenSats receives $10 million from #startsmall for bitcoin, nostr, and related FOSS development."
 ---
