Update ops team

--- a/data/authors/lucas.mdx
+++ b/data/authors/lucas.mdx
@@ -6,7 +6,7 @@ occupation: Volunteer
 company: OpenSats
 email: lucas@opensats.org
 nostr: npub176mj8c5pa6pxlmm8syv4uhmz0n8934w0pfnfddgawhycqcue69esr3qzt2
-volunteer: true
+ops: true
 ---
 
 Lucas is the co-founder of several small businesses, some of which he is
