--- a/data/authors/ace.mdx
+++ b/data/authors/ace.mdx
@@ -7,7 +7,7 @@ company: OpenSats
 email: ace@opensats.org
 nostr: npub1d9vusz3zdd3cp2nqfdhqv932a2e20nvkhnkngjmjepzs0fr72s2qdlzk2u
 github: https://github.com/bitcoinprecept
-volunteer: true
+ops: true
 ---
 
 Ace has served as a volunteer PM to the Bitcoin Product Community and FOSS
