Add Alvaro quote

--- a/data/blog/opensats-receives-one-million-from-reynolds-foundation.mdx
+++ b/data/blog/opensats-receives-one-million-from-reynolds-foundation.mdx
@@ -21,6 +21,23 @@ make a difference tomorrow.
 We are delighted to announce that the Reynolds Foundation is supporting OpenSats
 with a very generous donation of $1,000,000.
 
+> As new supporters of OpenSats, we are deeply appreciative of the opportunity
+> to engage with a community that exemplifies transparency, professionalism, and
+> inclusivity, all while championing the acceleration of freedom. We firmly
+> believe that the process is just as crucial, if not more so, than the outcome.
+> OpenSats stands as a testament to the power of both. Our organization embraces a
+> shared mantra of joyful optimism paired with a pragmatic approach: Togetherness.
+> This ethos, cultivated by the Reynolds Foundation under the visionary leadership
+> of our founder, Tim Reynolds, embodies our commitment to freedom and
+> scalability.
+> 
+> We warmly invite fellow philanthropists to join us in supporting
+> this groundbreaking endeavor, OpenSats. Their work ensures that our collective
+> efforts significantly impact the community we are dedicated to serving.
+> Together, we can **fix the money to fix the world.**
+>
+><cite>—Dr. Álvaro Salas-Castro, President & CEO</cite>
+
 100% of said donation will be used to support open-source projects and
 contributors working on freedom tech. Our [operational budget](/funds/ops) is
 funded separately, which allows us to not take any cut from donations going to
