Add CTA for /donate

--- a/data/blog/opensats-receives-one-million-from-reynolds-foundation.mdx
+++ b/data/blog/opensats-receives-one-million-from-reynolds-foundation.mdx
@@ -50,6 +50,7 @@ without the help of our generous donors.
 Thank you, Reynolds Foundation, for putting your trust and confidence in
 OpenSats. We'll do our best to make it count.
 
+If you are a fellow philanthropist, consider to [donate to our cause](/donate).
 If you are an open-source contributor working on freedom tech that is aligned
 with our mission, don't hesitate to apply for a grant via
 [opensats.org/apply](/apply).
