--- a/data/blog/opensats-receives-one-million-from-reynolds-foundation.mdx
+++ b/data/blog/opensats-receives-one-million-from-reynolds-foundation.mdx
@@ -3,6 +3,7 @@ title: "OpenSats Receives $1,000,000 Donation From The Reynolds Foundation"
 date: '2024-04-20'
 tags: ['OpenSats', 'funding', 'bitcoin', 'donations']
 authors: ['dergigi', 'default']
+images: ['/static/images/blog/30-reynolds.jpg']
 draft: false
 summary: "The Reynolds Foundation is supporting OpenSats with a generous $1,000,000 donation."
 ---
