Clarify that board members are volunteers

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -36,6 +36,10 @@ accountable nine-person board to make all organizational decisions. OpenSats'
 board members have deep-seated values and will stop at nothing to support and
 ensure the survival of free and open-source technology like Bitcoin.
 
+Board members are not compensated for their board member duties and do not
+benefit from donations given to [our funds](/funds). Board member duties are
+performed on a volunteer basis.
+
 <Members subset='Board'/>
 
 ---
