Link to /transparency & re-word FAQ

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -28,18 +28,16 @@ Donations to the general fund will be distributed periodically by our board. We
 evaluate and assess applications to make sure any grants are awarded to high
 impact projects in the Bitcoin space.
 
-We also maintain a list of mission-focused, open-source projects that have been
-vetted by our board members for continuous funding. Donors may recommend their
-gifts be directed to these specific projects; OpenSats will consider these
-recommendations but will retain sole discretion as to how funds are distributed.
+You can find a list of past and active grantees, as well as links to our reports
+at our [transparency](/transparency) section.
 
-## How much of my donation goes towards individuals and projects supported by OpenSats?
+## How much of my donation goes towards open-source contributors supported by OpenSats?
 
-All donations to the general fund and specific, mission-aligned FOSS projects
-are 100% passed through to OpenSats grant recipients. We try our best to find
-donor matching partners that cover the transaction fees that incur with each
-donation, regardless of payment method. Please [reach out] if you want to help
-us cover these costs.
+100%. All donations to our open-source funds go in full to OpenSats grant
+recipients.  We do not take a cut from donations and try our best to find donor
+matching partners that cover the transaction fees that incur with each donation,
+regardless of payment method. Please [reach out] if you want to help us cover
+these costs.
 
 [reach out]: mailto:support@opensats.org
 
