--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -47,13 +47,13 @@ We only distribute grants in bitcoin.
 
 We accept donations in fiat currency, but they are transferred to our exchange
 partner and used to purchase bitcoin. The bitcoin is then held and eventually
-distributed to project and grant recipients.
+distributed to grant recipients.
 
 ## How do you collect bitcoin donations?
 
-We use BTCPay Server to collect bitcoin on chain and lightning donations. This
-ensures that we pay no processing fees and your funds are stretched even
-farther.
+We use BTCPay Server to collect bitcoin donations, both on-chain and lightning.
+This ensures that we pay as little fees as possible so your funds are stretched
+even farther.
 
 ## How can I communicate with you?
 
