Add links to board, /donate, and small fixes

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -83,11 +83,12 @@ align with the mission of our charity to be eligible for donations.
 Any project that is free and open-source and is aligned with the OpenSats
 [mission] is free to [submit an application](/apply).
 
-All applications which fulfill the criteria will be evaluated by the Board. Upon
-board approval and collection of necessary supplemental data, approved projects
-might be showcased on the OpenSats website. If showcased, donors will be able to
-contribute funds and recommend that the OpenSats' board considers their
-donations be allocated towards these pre-approved, mission-aligned projects.
+All applications which fulfill the criteria will be evaluated by [the
+Board][board]. Upon board approval and collection of necessary supplemental
+data, approved projects might be showcased on the OpenSats website. If
+showcased, donors will be able to contribute funds and recommend that the
+OpenSats' board considers their donations be allocated towards these
+pre-approved, mission-aligned projects.
 
 If you are helping Bitcoin and FOSS, please [submit an application](/apply) on
 our website.
@@ -101,12 +102,12 @@ accountable nine person board to make all organizational decisions.
 OpenSats' board members have deep-seated values and will stop at nothing to
 support and ensure the survival of free and open-source technology like Bitcoin.
 
-The board is composed of well-known and respected public-facing individuals who
-will carry the torch and be held accountable for their choices. We encourage
-community feedback, dialogue, and constructive criticism. We can only promise to
-do our best to ensure that all funds go to deserving projects which support
-OpenSats' mission of creating a sustainable and consistent ecosystem of
-funding for Bitcoin and Bitcoin-related FOSS contributors.
+[The board][board] is composed of well-known and respected public-facing
+individuals who will carry the torch and be held accountable for their choices.
+We encourage community feedback, dialogue, and constructive criticism. We can
+only promise to do our best to ensure that all funds go to deserving projects
+which support OpenSats' mission of creating a sustainable and consistent
+ecosystem of funding for Bitcoin and Bitcoin-related FOSS contributors.
 
 We are committed to being 100% passthrough for all donations made to our
 funds. To this day our operational, legal, and payment processing fees have
@@ -120,18 +121,18 @@ passthrough.
 
 ## Tell me more about your board. How does it work?
 
-We have [nine board members](/about/#board-of-directors) and we vote by
-majority. All standard decisions (like which new projects are added to the
-website or which projects will receive grants allocated from the general fund)
-are made by simple majority (5-4), while board-related changes will require 6-3
-majority. New members to the board will be announced publicly.
+We have [nine board members][board] and we vote by majority. All standard
+decisions (like which new projects are added to the website or which projects
+will receive grants allocated from the general fund) are made by simple majority
+(5-4), while board-related changes will require 6-3 majority. New members to the
+board will be announced publicly.
 
 ## Are you really 100% passthrough?
 
 Yes, really. We have an operational budget to cover lawyers, accountants, and
 basic operational costs, but they aren't paid from your donations to projects.
 Our operational costs are covered by generous donors who regularly donate to our
-[operations budget](/projects/opensats_operations_budget).
+[Operations Budget](/projects/opensats_operations_budget).
 
   - John Pfeffer, Greg Foss, Ten31, #startsmall, and The Bitcoin Company have contributed to our legal and operational overhead or contributed technical development resources so OpenSats can stay 100% passthrough for all general fund and project specific donations.
   - BTCPay Server is a FOSS tool we use to accept bitcoin with no fees.
@@ -152,4 +153,7 @@ OpenSats relies on donors like you to help promote and support a sustainable
 ecosystem of contributors to Bitcoin and related free and open-source projects.
 We greatly appreciate your contributions.
 
+Visit [opensats.org/donate](/donate) for more information on donations.
+
 [mission]: /mission
+[board]: /about#board-of-directors
