Small fixes for consistency

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -70,9 +70,9 @@ You can also write to us at:
 ## How often are funding opportunities announced?
 
 Funding opportunities are announced as they arise, depending on funding
-availability. Projects that align with our mission statement are encouraged to
-apply. Board members evaluate each application based on technical merit,
-potential impact, and the team's ability to execute.
+availability. Projects that align with [our mission statement][mission] are
+encouraged to apply. Board members evaluate each application based on technical
+merit, potential impact, and the team's ability to execute.
 
 All projects should be free and open-source and related to Bitcoin or an
 ancillary technology (like Tor, etc.) which helps Bitcoin use. Your project must
@@ -81,7 +81,7 @@ align with the mission of our charity to be eligible for donations.
 ## How do I apply for funding?
 
 Any project that is free and open-source and is aligned with the OpenSats
-[mission] is free to [submit an application](/apply).
+mission is free to [submit an application](/apply).
 
 All applications which fulfill the criteria will be evaluated by [the
 Board][board]. Upon board approval and collection of necessary supplemental
@@ -113,11 +113,10 @@ We are committed to being 100% passthrough for all donations made to our
 funds. To this day our operational, legal, and payment processing fees have
 been graciously and privately funded.
 
-Please consider donating to the [OpenSats Operations
-Budget](/projects/opensats_operations_budget) which will help
-cover our basic operational expenses (which we have kept to a minimum) so we can
-ensure that all donations intended for Bitcoin and FOSS projects remain 100%
-passthrough.
+Please consider donating to the OpenSats [Operations
+Budget](/projects/opensats_operations_budget) which will help cover our basic
+operational expenses (which we have kept to a minimum) so we can ensure that all
+donations intended for Bitcoin and FOSS projects remain 100% passthrough.
 
 ## Tell me more about your board. How does it work?
 
