Add financial gain question & move stuff around
...also fixes some links

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -36,8 +36,9 @@ at our [transparency](/transparency) section.
 100%. All donations to our open-source funds go in full to OpenSats grant
 recipients.  We do not take a cut from donations and try our best to find donor
 matching partners that cover the transaction fees that incur with each donation,
-regardless of payment method. Please [reach out] if you want to help us cover
-these costs.
+regardless of payment method. 
+
+Please [reach out] if you want to help us cover these costs.
 
 [reach out]: mailto:support@opensats.org
 
@@ -109,14 +110,11 @@ only promise to do our best to ensure that all funds go to deserving projects
 which support OpenSats' mission of creating a sustainable and consistent
 ecosystem of funding for Bitcoin and Bitcoin-related FOSS contributors.
 
-We are committed to being 100% passthrough for all donations made to our
-funds. To this day our operational, legal, and payment processing fees have
-been graciously and privately funded.
+# Do board members benefit financially from donations?
 
-Please consider donating to the OpenSats [Operations
-Budget](/projects/opensats_operations_budget) which will help cover our basic
-operational expenses (which we have kept to a minimum) so we can ensure that all
-donations intended for Bitcoin and FOSS projects remain 100% passthrough.
+No. Board members are not compensated for their board member duties and do not
+benefit from donations given to our funds. Board member duties are performed on
+a volunteer basis.
 
 ## Tell me more about your board. How does it work?
 
@@ -131,12 +129,22 @@ board will be announced publicly.
 Yes, really. We have an operational budget to cover lawyers, accountants, and
 basic operational costs, but they aren't paid from your donations to projects.
 Our operational costs are covered by generous donors who regularly donate to our
-[Operations Budget](/projects/opensats_operations_budget).
+[Operations Budget][ops].
 
   - John Pfeffer, Greg Foss, Ten31, #startsmall, and The Bitcoin Company have contributed to our legal and operational overhead or contributed technical development resources so OpenSats can stay 100% passthrough for all general fund and project specific donations.
   - BTCPay Server is a FOSS tool we use to accept bitcoin with no fees.
   - River provides our bitcoin exchange services with no added fees.
   - Unchained provides our multi-sig custody services with no fees.
+
+We are committed to remaining a 100% passthrough operation, meaning that we are
+passing on 100% of donations made to our funds to open-source contributors. To
+this day our operational, legal, and payment processing fees have been
+graciously and privately funded.
+
+Please [consider donating][ops] to the Operations Budget which will help cover
+our basic operational expenses (which we have kept to a minimum) so we can
+ensure that all donations intended for Bitcoin and FOSS projects remain 100%
+passthrough.
 
 ## Are my donations tax deductible?
 
@@ -156,3 +164,4 @@ Visit [opensats.org/donate](/donate) for more information on donations.
 
 [mission]: /mission
 [board]: /about#board-of-directors
+[ops]: /funds/ops
