--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -28,18 +28,17 @@ Donations to the general fund will be distributed periodically by our board. We
 evaluate and assess applications to make sure any grants are awarded to high
 impact projects in the Bitcoin space.
 
-We also maintain a list of mission-focused, open-source projects that have been
-vetted by our board members for continuous funding. Donors may recommend their
-gifts be directed to these specific projects; OpenSats will consider these
-recommendations but will retain sole discretion as to how funds are distributed.
+You can find a list of past and active grantees, as well as links to our reports
+at our [transparency](/transparency) section.
 
-## How much of my donation goes towards individuals and projects supported by OpenSats?
+## How much of my donation goes towards open-source contributors supported by OpenSats?
 
-All donations to the general fund and specific, mission-aligned FOSS projects
-are 100% passed through to OpenSats grant recipients. We try our best to find
-donor matching partners that cover the transaction fees that incur with each
-donation, regardless of payment method. Please [reach out] if you want to help
-us cover these costs.
+100%. All donations to our open-source funds go in full to OpenSats grant
+recipients.  We do not take a cut from donations and try our best to find donor
+matching partners that cover the transaction fees that incur with each donation,
+regardless of payment method. 
+
+Please [reach out] if you want to help us cover these costs.
 
 [reach out]: mailto:support@opensats.org
 
@@ -49,13 +48,13 @@ We only distribute grants in bitcoin.
 
 We accept donations in fiat currency, but they are transferred to our exchange
 partner and used to purchase bitcoin. The bitcoin is then held and eventually
-distributed to project and grant recipients.
+distributed to grant recipients.
 
 ## How do you collect bitcoin donations?
 
-We use BTCPay Server to collect bitcoin on chain and lightning donations. This
-ensures that we pay no processing fees and your funds are stretched even
-farther.
+We use BTCPay Server to collect bitcoin donations, both on-chain and lightning.
+This ensures that we pay as little fees as possible so your funds are stretched
+even farther.
 
 ## How can I communicate with you?
 
@@ -72,9 +71,9 @@ You can also write to us at:
 ## How often are funding opportunities announced?
 
 Funding opportunities are announced as they arise, depending on funding
-availability. Projects that align with our mission statement are encouraged to
-apply. Board members evaluate each application based on technical merit,
-potential impact, and the team's ability to execute.
+availability. Projects that align with [our mission statement][mission] are
+encouraged to apply. Board members evaluate each application based on technical
+merit, potential impact, and the team's ability to execute.
 
 All projects should be free and open-source and related to Bitcoin or an
 ancillary technology (like Tor, etc.) which helps Bitcoin use. Your project must
@@ -83,13 +82,14 @@ align with the mission of our charity to be eligible for donations.
 ## How do I apply for funding?
 
 Any project that is free and open-source and is aligned with the OpenSats
-[mission] is free to [submit an application](/apply).
+mission is free to [submit an application](/apply).
 
-All applications which fulfill the criteria will be evaluated by the Board. Upon
-board approval and collection of necessary supplemental data, approved projects
-might be showcased on the OpenSats website. If showcased, donors will be able to
-contribute funds and recommend that the OpenSats' board considers their
-donations be allocated towards these pre-approved, mission-aligned projects.
+All applications which fulfill the criteria will be evaluated by [the
+Board][board]. Upon board approval and collection of necessary supplemental
+data, approved projects might be showcased on the OpenSats website. If
+showcased, donors will be able to contribute funds and recommend that the
+OpenSats' board considers their donations be allocated towards these
+pre-approved, mission-aligned projects.
 
 If you are helping Bitcoin and FOSS, please [submit an application](/apply) on
 our website.
@@ -103,42 +103,48 @@ accountable nine person board to make all organizational decisions.
 OpenSats' board members have deep-seated values and will stop at nothing to
 support and ensure the survival of free and open-source technology like Bitcoin.
 
-The board is composed of well-known and respected public-facing individuals who
-will carry the torch and be held accountable for their choices. We encourage
-community feedback, dialogue, and constructive criticism. We can only promise to
-do our best to ensure that all funds go to deserving projects which support
-OpenSats' mission of creating a sustainable and consistent ecosystem of
-funding for Bitcoin and Bitcoin-related FOSS contributors.
+[The board][board] is composed of well-known and respected public-facing
+individuals who will carry the torch and be held accountable for their choices.
+We encourage community feedback, dialogue, and constructive criticism. We can
+only promise to do our best to ensure that all funds go to deserving projects
+which support OpenSats' mission of creating a sustainable and consistent
+ecosystem of funding for Bitcoin and Bitcoin-related FOSS contributors.
 
-We are committed to being 100% passthrough for all donations made to our
-funds. To this day our operational, legal, and payment processing fees have
-been graciously and privately funded.
+# Do board members benefit financially from donations?
 
-Please consider donating to the [OpenSats Operations
-Budget](/projects/opensats_operations_budget) which will help
-cover our basic operational expenses (which we have kept to a minimum) so we can
-ensure that all donations intended for Bitcoin and FOSS projects remain 100%
-passthrough.
+No. Board members are not compensated for their board member duties and do not
+benefit from donations given to our funds. Board member duties are performed on
+a volunteer basis.
 
 ## Tell me more about your board. How does it work?
 
-We have [nine board members](/about/#board-of-directors) and we vote by
-majority. All standard decisions (like which new projects are added to the
-website or which projects will receive grants allocated from the general fund)
-are made by simple majority (5-4), while board-related changes will require 6-3
-majority. New members to the board will be announced publicly.
+We have [nine board members][board] and we vote by majority. All standard
+decisions (like which new projects are added to the website or which projects
+will receive grants allocated from the general fund) are made by simple majority
+(5-4), while board-related changes will require 6-3 majority. New members to the
+board will be announced publicly.
 
 ## Are you really 100% passthrough?
 
 Yes, really. We have an operational budget to cover lawyers, accountants, and
 basic operational costs, but they aren't paid from your donations to projects.
 Our operational costs are covered by generous donors who regularly donate to our
-[operations budget](/projects/opensats_operations_budget).
+[Operations Budget][ops].
 
-  - John Pfeffer, Greg Foss, Ten31, #startsmall, and The Bitcoin Company have contributed to our legal and operational overhead or contributed technical development resources so OpenSats can stay 100% passthrough for all general fund and project specific donations.
+  - John Pfeffer, Greg Foss, Ten31, #startsmall, and The Bitcoin Company have contributed to our legal and operational overhead or contributed technical development resources so OpenSats can stay 100% passthrough for all donations direct to our General Fund and Nostr Fund.
   - BTCPay Server is a FOSS tool we use to accept bitcoin with no fees.
   - River provides our bitcoin exchange services with no added fees.
   - Unchained provides our multi-sig custody services with no fees.
+
+We are committed to remaining a 100% passthrough operation, meaning that we are
+passing on 100% of donations made to our funds to open-source contributors. To
+this day our operational, legal, and payment processing fees have been
+graciously and privately funded.
+
+Please [consider donating][ops] to the Operations Budget which will help cover
+our basic operational expenses (which we have kept to a minimum) so we can
+ensure that all donations intended for Bitcoin and FOSS projects remain 100%
+passthrough.
 
 ## Are my donations tax deductible?
 
@@ -154,4 +160,8 @@ OpenSats relies on donors like you to help promote and support a sustainable
 ecosystem of contributors to Bitcoin and related free and open-source projects.
 We greatly appreciate your contributions.
 
+Visit [opensats.org/donate](/donate) for more information on donations.
+
 [mission]: /mission
+[board]: /about#board-of-directors
+[ops]: /funds/ops
