--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -131,7 +131,7 @@ basic operational costs, but they aren't paid from your donations to projects.
 Our operational costs are covered by generous donors who regularly donate to our
 [Operations Budget][ops].
 
-  - John Pfeffer, Greg Foss, Ten31, #startsmall, and The Bitcoin Company have contributed to our legal and operational overhead or contributed technical development resources so OpenSats can stay 100% passthrough for all donations direct to our General Fund and Nostr Fund.
+  - John Pfeffer, Greg Foss, Ten31, #startsmall, and The Bitcoin Company have contributed to our legal and operational overhead or contributed technical development resources so OpenSats can stay 100% passthrough for all donations directed to our General Fund and Nostr Fund.
   - BTCPay Server is a FOSS tool we use to accept bitcoin with no fees.
   - River provides our bitcoin exchange services with no added fees.
   - Unchained provides our multi-sig custody services with no fees.
