Add "donate to ops" button in /about

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -49,14 +49,18 @@ performed on a volunteer basis.
 Our operations team ensures that OpenSats remains the well-oiled sat-dispensing
 machine that it is today.
 
+<Members subset='Ops'/>
+
 Unlike most charities, OpenSats doesn't take a percentage of any donations for
 our operational budget. This means that our small operation budget is funded
 from donors like you. If you'd like to contribute specifically to the operations
 budget which helps OpenSats function and support other FOSS projects and
 contributors in the space, please consider donating to our [Operations
-Budget](https://opensats.org/projects/opensats_operations_budget).
+Budget](https://opensats.org/projects/opensats_operations_budget):
 
-<Members subset='Ops'/>
+<center>
+<DonateToOperationsButton/>
+</center>
 
 ---
 
