Various cosmetic fixes and updates (#265)
* Link to /donate in nav

* Fix footer display issues on small devices

* Add "Learn More" to link to /donate

* Hide "donate to ops" on mobile

* Add "donate to ops" button to /mission page

* Hide "Read more" on small devices (blog post links)

* Remove underline from project cards

* Remove Gigi's twitter (404)

* Add "donate to ops" button in /about

--- a/data/pages/mission.mdx
+++ b/data/pages/mission.mdx
@@ -38,3 +38,7 @@ believe that bitcoin has the potential to change the world.
 
 Do you care about freedom tech and how it can help to not only fix the money,
 but fix the world? Consider [supporting us](/support) in pursuing our mission.
+
+<center>
+  <DonateToOperationsButton />
+</center>
