--- a/data/blog/opensats-receives-additional-funding-of-dollar21m-from-startsmall.mdx
+++ b/data/blog/opensats-receives-additional-funding-of-dollar21m-from-startsmall.mdx
@@ -9,8 +9,8 @@ summary: "OpenSats receives $21 million from #startsmall for bitcoin, nostr, and
 We are thrilled to announce that OpenSats has received an additional donation of
 \$21M from [#startsmall](https://startsmall.llc/), Jack Dorsey's philanthropic
 initiative. This donation will top up our funds as well as our operations
-budget, with \$15,000,000 going to our General Fund, \$5,000,000 to The Nostr
-Fund, and \$1M to our operations budget.
+budget, with \$15,000,000 going to our [General Fund][gf], \$5,000,000 to [The Nostr
+Fund][nf], and \$1M to our [operations budget][ops].
 
 > Bitcoin changes absolutely everything. I don't think there is anything more
 > important in my lifetime to work on.
@@ -18,30 +18,34 @@ Fund, and \$1M to our operations budget.
 ><cite>—[jack][JD]</cite>
 
 We agree, and are honored and humbled to receive such a generous donation. We
-will do our best to continually allocate the funds to high-impact projects and
-[freedom tech
-infrastructure](https://opensats.org/blog/bitcoin-infrastructure-this-decade),
+will do our best to [continually allocate][EOY2023] the funds to high-impact
+projects and [freedom tech
+infrastructure](/blog/bitcoin-infrastructure-this-decade),
 on top of providing long-term support for exceptional open-source developers and
 researchers.
 
 As a 501(c)(3) public charity  we are reliant on donations from the general
 public, as well as philanthropic organizations such as #startsmall and the
 [Reynolds
-Foundation](https://opensats.org/blog/opensats-receives-one-million-from-reynolds-foundation).
+Foundation](/blog/opensats-receives-one-million-from-reynolds-foundation).
 We are incredibly grateful for the massive support we have received in the last
 18 months, and we hope that other philanthropists will join in so that OpenSats
 may remain an effective public charity for many years to come.
 
-If you are aligned with [our mission](https://opensats.org/mission) and are in
+If you are aligned with [our mission](/mission) and are in
 support of Bitcoin and the wider freedom tech movement in general, don't
 hesitate to [reach out to us](mailto:donate@opensats.org) or make a donation to
-one of [our funds](https://opensats.org/funds). Every sat counts, and every
+one of [our funds](/funds). Every sat counts, and every
 little bit helps.
 
 <center>
 <DonateToGeneralFundButton/>
 </center>
 
-If you are an open-source developer in need of funding, don't hesitate to apply: [opensats.org/apply](https://opensats.org/apply)
+If you are an open-source developer in need of funding, don't hesitate to apply: [opensats.org/apply](/apply)
 
 [JD]: https://njump.me/npub1sg6plzptd64u62a878hep2kev88swjh3tw00gjsfl8f237lmu63q0uf63m
+[EOY2023]: /blog/2023-year-in-review
+[gf]: /funds/general
+[nf]: /funds/nostr
+[ops]: /funds/ops
