Update `bonusUSD` values to reflect donation

--- a/data/funds/ops.mdx
+++ b/data/funds/ops.mdx
@@ -10,7 +10,7 @@ git: 'https://github.com/OpenSats'
 zaprite: 'lZo1wcsJ0SQb58XfGC4e'
 btcpay: 'opensats_operations_budget'
 tags: ['OpenSats', 'Fund']
-bonusUSD: 330000
+bonusUSD: 1330000
 ---
 
 ## About this project
