Implement changes from review

--- a/data/authors/btcschellingpt.mdx
+++ b/data/authors/btcschellingpt.mdx
@@ -1,7 +1,7 @@
 ---
 name: Tim
-nym: WizardofAus 
-avatar: /static/images/volunteers/wizardofaus.jpg
+nym: btcschellingpt 
+avatar: /static/images/volunteers/btcschellingpt.jpg
 occupation: Volunteer
 company: OpenSats
 email: btcschellingpt@opensats.org
@@ -18,4 +18,3 @@ technology startups. Now retired from fiat life, he's focused on Bitcoin educati
 activity and projects that assist Bitcoin flourish.
 
 [volunteers]: /about#volunteers
-
