--- a/data/blog/shashwat-vangani-receives-lts-grant.mdx
+++ b/data/blog/shashwat-vangani-receives-lts-grant.mdx
@@ -3,7 +3,7 @@ title: "Long-Term Support For Shashwat Vangani"
 date: '2024-05-02'
 tags: ['OpenSats', 'grants', 'bitcoin', 'LTS']
 draft: false
-authors: ['wizardofaus']
+authors: ['btcschellingpt']
 images: ['/static/images/blog/31-shashwat-lts.jpg']
 summary: "OpenSats Welcomes Shashwat Vangani as an LTS Grantee."
 ---
