--- a/data/blog/opensats-receives-additional-funding-of-dollar21m-from-startsmall.mdx
+++ b/data/blog/opensats-receives-additional-funding-of-dollar21m-from-startsmall.mdx
@@ -6,10 +6,11 @@ draft: false
 summary: "OpenSats receives $21 million from #startsmall for bitcoin, nostr, and related FOSS development."
 ---
 
+
 We are thrilled to announce that OpenSats has received an additional donation of
 \$21M from [#startsmall](https://startsmall.llc/), Jack Dorsey's philanthropic
-initiative. This donation will top up our funds as well as our operations
-budget, with \$15,000,000 going to our [General Fund][gf], \$5,000,000 to [The Nostr
+initiative. This donation will top up our funds and operations budget, with
+\$15,000,000 going to our [General Fund][gf], \$5,000,000 to [The Nostr
 Fund][nf], and \$1M to our [operations budget][ops].
 
 > Bitcoin changes absolutely everything. I don't think there is anything more
@@ -18,31 +19,36 @@ Fund][nf], and \$1M to our [operations budget][ops].
 ><cite>—[jack][JD]</cite>
 
 We agree, and are honored and humbled to receive such a generous donation. We
-will do our best to [continually allocate][EOY2023] the funds to high-impact
-projects and [freedom tech
-infrastructure](/blog/bitcoin-infrastructure-this-decade),
-on top of providing long-term support for exceptional open-source developers and
-researchers.
+will do our best to continually allocate the funds to high-impact projects and
+[freedom tech infrastructure](/blog/bitcoin-infrastructure-this-decade).  As of
+this writing, OpenSats has allocated close to [\$10,000,000 in grants][EOY2023],
+supporting over 100 grantees, many of whom for the [long term](/tags/lts).
 
-As a 501(c)(3) public charity  we are reliant on donations from the general
-public, as well as philanthropic organizations such as #startsmall and the
-[Reynolds
+As a 501(c)(3) public charity, we rely on donations from the general public,
+including philanthropic organizations such as #startsmall and the [Reynolds
 Foundation](/blog/opensats-receives-one-million-from-reynolds-foundation).
 We are incredibly grateful for the massive support we have received in the last
 18 months, and we hope that other philanthropists will join in so that OpenSats
 may remain an effective public charity for many years to come.
 
-If you are aligned with [our mission](/mission) and are in
-support of Bitcoin and the wider freedom tech movement in general, don't
-hesitate to [reach out to us](mailto:donate@opensats.org) or make a donation to
-one of [our funds](/funds). Every sat counts, and every
-little bit helps.
+If you are aligned with [our mission](/mission) and are
+supporting Bitcoin and the broader freedom tech movement in general, don't
+hesitate to [reach out to us](mailto:donate@opensats.org) or donate to one of
+[our funds](/funds). Every sat counts, and every little bit
+helps.
 
 <center>
 <DonateToGeneralFundButton/>
 </center>
 
-If you are an open-source developer in need of funding, don't hesitate to apply: [opensats.org/apply](/apply)
+If you are an open-source developer in need of funding, don't hesitate to apply:
+[opensats.org/apply](/apply)
+
+Thank you for your continued support. Free and open-source software is a
+collaborative effort, and we couldn't do it without all of you. Let us proceed
+together, optimistically and apace.
+
+Onward.
 
 [JD]: https://njump.me/npub1sg6plzptd64u62a878hep2kev88swjh3tw00gjsfl8f237lmu63q0uf63m
 [EOY2023]: /blog/2023-year-in-review
