Improve wording in /support

--- a/data/pages/support.mdx
+++ b/data/pages/support.mdx
@@ -41,15 +41,15 @@ There are many ways that you can help OpenSats achieve its mission.
 
 You can:
 
-- [Donate] to our Operations Budget
+- [Give][ops] to our Operations Budget
 - [Volunteer] your time to OpenSats
 - [Spread the word] about OpenSats
-- [Donate to specific projects](/projects) or funds
+- [Donate](/funds) to one of our funds
 - [Apply for funding](/apply), if you are working on a mission-aligned project
 
 Every little bit helps. Thank you for your support!
 
-[Donate]: /projects/opensats_operations_budget
+[ops]: /funds/ops
 [Volunteer]: mailto:volunteer@opensats.org
 [Spread the word]: http://njump.me/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f
 
