Add /contact text

--- a/data/pages/contact.mdx
+++ b/data/pages/contact.mdx
@@ -5,4 +5,42 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-Nam dictum eleifend porta. Pellentesque condimentum erat ut pellentesque mollis. Integer quis vehicula libero. Nulla felis purus, auctor et tellus vel, ultrices hendrerit velit. Nunc scelerisque accumsan felis, ac suscipit augue congue ut. Quisque dictum ac quam sed tincidunt. Curabitur malesuada iaculis vestibulum.
+Want to get in touch? Please reach out to:
+
+- support@opensats.org - for general inquiries & support
+- donate@opensats.org - if you need help with [making a donation](https://opensats.org/donate)
+
+We will do our best to answer all questions and respond in a reasonable
+timeframe. That said, please remember that our operational team is small and
+sometimes flooded with requests for support and applications. We hope that [our
+reports](https://opensats.org/transparency) and [FAQ](https://opensats.org/faq)
+will answer some of the questions you might have.
+
+## OpenSats Design Initiative
+
+Are you an open-source developer in need of design guidance? Do you need help
+with reviewing the UX of your software? Are you working on something that could
+benefit from [#nostrdesign](https://nostrdesign.org/) or the [Bitcoin Design
+Community](https://opensats.org/projects/bitcoindesign)?
+
+Don't hesitate to reach out to design@opensats.org
+
+## Partnerships
+
+Are you interested in partnering with OpenSats? Do you provide services that
+could help us improve our [donation flow](https://opensats.org/donate) or [grant
+programs](https://opensats.org/apply)? Do you align with [our
+mission](https://opensats.org/mission) and want to join us in supporting freedom
+tech for the long term?
+
+Please send us your proposal at partnerships@opensats.org
+
+## Want to Help?
+
+You can join our growing [team of
+volunteers](https://opensats.org/about#volunteers) to help us provide an
+ecosystem of sustainable funding for Bitcoin, nostr, and related freedom tech.
+There are plenty of things to do, and _many hands make light work_, as the
+saying goes. Interested?
+
+Send a short motivational letter to volunteer@opensats.org
