--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -110,7 +110,7 @@ only promise to do our best to ensure that all funds go to deserving projects
 which support OpenSats' mission of creating a sustainable and consistent
 ecosystem of funding for Bitcoin and Bitcoin-related FOSS contributors.
 
-# Do board members benefit financially from donations?
+## Do board members benefit financially from donations?
 
 No. Board members are not compensated for their board member duties and do not
 benefit from donations given to our funds. Board member duties are performed on
