--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -58,7 +58,7 @@ even farther.
 
 ## How can I communicate with you?
 
-The best way to communicate with us is via email: 
+The best way to [contact us](/contact) is via email:
 
 - support@opensats.org
 
