Add link to /contact in /privacy

--- a/data/pages/privacy.mdx
+++ b/data/pages/privacy.mdx
@@ -179,7 +179,7 @@ Only to the extent that Open Sats meets the minimum thresholds as required under
 
 ### Contact Us
 
-If you have any questions about our practices or this Privacy Policy, please contact us at support@opensats.org, or write to us at:
+If you have any questions about our practices or this Privacy Policy, please [contact us](/contact) at support@opensats.org, or write to us at:
 
     Open Sats Initiative, Inc.  
     12436 FM 1960 Rd West PMB #1003  
