Add link to /contact

--- a/data/blog/opensats-receives-additional-funding-of-dollar21m-from-startsmall.mdx
+++ b/data/blog/opensats-receives-additional-funding-of-dollar21m-from-startsmall.mdx
@@ -33,7 +33,7 @@ may remain an effective public charity for many years to come.
 
 If you are aligned with [our mission](/mission) and are
 supporting Bitcoin and the broader freedom tech movement in general, don't
-hesitate to [reach out to us](mailto:donate@opensats.org) or donate to one of
+hesitate to [reach out to us](/contact) or donate to one of
 [our funds](/funds). Every sat counts, and every little bit
 helps.
 
