Add cover image

--- a/data/blog/opensats-receives-additional-funding-of-dollar21m-from-startsmall.mdx
+++ b/data/blog/opensats-receives-additional-funding-of-dollar21m-from-startsmall.mdx
@@ -2,6 +2,7 @@
 title: "Additional Funding from #startsmall"
 date: '2024-05-04'
 tags: ['OpenSats', 'funding', 'donations', 'startsmall', 'bitcoin', 'nostr']
+images: ['/static/images/blog/32-startsmall.jpg']
 draft: false
 summary: "OpenSats receives $21 million from #startsmall for bitcoin, nostr, and related FOSS development."
 ---
