--- a/data/blog/nostr-design-highlights.mdx
+++ b/data/blog/nostr-design-highlights.mdx
@@ -15,7 +15,7 @@ images:
 summary: A brief update on what the Nostr Designers have been up too
 ---
 
-The pixel-obsessed nostriches have been busy, gently whipping the protocol into a presentable shape. Here are the highlights *hehe* of some of the tools as a result:
+The pixel-obsessed nostriches have been busy, gently whipping the protocol into a presentable shape. Here are the highlights \*hehe\* of some of the tools as a result:
 
 ![Highlighter](/static/images/blog/highlighter.png)
 
