--- a/data/blog/nostr-design-highlights.mdx
+++ b/data/blog/nostr-design-highlights.mdx
@@ -70,4 +70,4 @@ More new features are in the works involving custom feeds and search, stay tuned
 
 ### Get design assistance for your nostr or bitcoin project
 
-OpenSats is proud to support developers and designers who contribute to open source projects in the nostr and bitcoin space. This means your open-source project or shipped product can take advantage of this initiative. To get assistance, email design@opensats.org or tag #nostrdesign in any of the social clients with a few details about your project.
+OpenSats is proud to support developers and designers who contribute to open source projects in the nostr and bitcoin space. This means your open-source project or shipped product can take advantage of this initiative. To get assistance, email design@opensats.org or tag [#nostrdesign](https://nostr.band/?q=%23nostrdesign) in any of the social clients with a few details about your project.
