Fix daniele's author name

--- a/data/blog/nostr-design-highlights.mdx
+++ b/data/blog/nostr-design-highlights.mdx
@@ -7,9 +7,9 @@ tags:
   - design
 draft: false
 authors:
-  - niel
   - karnage
-  - daniele
+  - dtonon
+  - niel
 images:
   - /static/images/blog/33-nostrdesign.jpg
 summary: A brief update on what the Nostr Designers have been up too
