--- a/data/blog/nostr-design-highlights.mdx
+++ b/data/blog/nostr-design-highlights.mdx
@@ -15,8 +15,8 @@ images:
 summary: A brief update on what the Nostr Designers have been up too
 ---
 
-The pixel-obsessed [nostriches](/nostr#nostr-design) have been busy, gently
-whipping the protocol into a presentable shape. Here are the highlights \*hehe\*
+The [pixel-obsessed ostriches](/nostr#nostr-design) have been busy, gently
+whipping the protocol into a presentable shape. Here are the highlights *\*hehe\**
 of some of the tools as a result:
 
 ![Highlighter](/static/images/blog/highlighter.png)
